[package]
name = "awestruck-printer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
discord-markdown = { git = "https://github.com/FizzyApple12/discord-markdown.git", version = "0.1.2" }
dotenvy_macro = "0.15"
serenity = { version = "0.12", features = [
    "chrono",
    "client",
    "utils",
    "cache",
] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
escpos = { version = "0.13", features = [
    "barcodes",
    "codes_2d",
    "graphics",
    "usb",
] }
lazy_static = "1.5"
reqwest = { version = "0.12", features = ["blocking"] }
deunicode = "1.6.0"
regex = "1.11.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
websocket = "0.27.1"
